Fix some icons alignments

--- a/app/scss/_appbar.scss
+++ b/app/scss/_appbar.scss
@@ -65,12 +65,14 @@ nav.appbar {
 
     .search-icon {
       flex: 1 1 auto;
+      text-align: center;
 
       i {
         font-size: 1.6rem;
         line-height: 36px;
-        text-align: center;
-        display: block;
+        height: 36px;
+        display: inline-block;
+        cursor: default;
       }
 
     }
