--- a/app/scss/_sidenav.scss
+++ b/app/scss/_sidenav.scss
@@ -16,11 +16,11 @@
       height: 44px; 
       @extend .truncate;
       i {
-        font-size: 1.6rem;
         font-weight: normal;
         display: inline-block;
         vertical-align: middle;
-        line-height: normal;
+        height: 24px;
+        line-height: 24px;
       }
       span {
         font-weight: bold;
